<resources>
    <string name="app_name">GitHub User Rview</string>
    <string name="githubid">githubId</string>
    <string name="detail_deskripsi">Detail Deskripsi</string>
    <string name="profil_lengkap">Profil Lengkap</string>
    <string name="tombolshare">tombolshare</string>
    <string name="like_share">Like | Share</string>
    <string name="develop_by_sadar_studio_2021">develop by sadar@studio | 2021</string>
    <string name="ghicon">ghicon</string>
    <string name="iconnama">iconnama</string>
    <string name="bar_title_info">GitHub User | Profile Info</string>
    <string name="bar_title_detail">GitHub User | Detail Info</string>
    <string name="tombollike" />
    <string name="search_hint">I\'m Looking for…</string>
    <string name="search_menu">Search</string>

    <string name="tab_text_1">Followers</string>
    <string name="tab_text_2">Following</string>
    <string name="content_tab_home">Welcome Home</string>
    <string name="content_tab_profile">Change your Profile here</string>
    <string name="content_tab_text">This is Tab %1$d</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ini_adalah_halaman_search">Hasil pencarian Anda :</string>
    <string name="foto">foto</string>
    <string name="floating">floating</string>
    <string name="search_here">Search here …</string>

    <string-array name="avatar">
        <item>@drawable/user1</item>
        <item>@drawable/user2</item>
        <item>@drawable/user3</item>
        <item>@drawable/user4</item>
        <item>@drawable/user5</item>
        <item>@drawable/user6</item>
        <item>@drawable/user7</item>
        <item>@drawable/user8</item>
        <item>@drawable/user9</item>
        <item>@drawable/user10</item>
        <item>@drawable/user11</item>
        <item>@drawable/user12</item>
    </string-array>

    <string-array name="username">
        <item>JakeWharton</item>
        <item>amitshekhariitbhu</item>
        <item>romainguy</item>
        <item>chrisbanes</item>
        <item>tipsy</item>
        <item>ravi8x</item>
        <item>jasoet</item>
        <item>budioktaviyan</item>
        <item>hendisantika</item>
        <item>sidiqpermana</item>
        <item>sadara</item>
        <item>fabpot</item>
    </string-array>

    <string-array name="surename">
        <item>Jake Wharton</item>
        <item>Amit Shekhar</item>
        <item>Romain Guy</item>
        <item>Chris Banes</item>
        <item>David</item>
        <item>Ravi Tamada</item>
        <item>Deny Prasetyo</item>
        <item>Budi Oktaviyan</item>
        <item>Hendi Santika</item>
        <item>Sidiq Permana</item>
        <item>Aji Sadara</item>
        <item>Fabian Potencier</item>
    </string-array>

    <string-array name="location">
        <item>Pittsburgh, PA, USA</item>
        <item>New Delhi, India</item>
        <item>California</item>
        <item>Sydney, Australia</item>
        <item>Trondheim, Norway</item>
        <item>India</item>
        <item>Kotagede, Yogyakarta, Indonesia</item>
        <item>Jakarta, Indonesia</item>
        <item>Bojongsoang, Bandung, Jawa Barat</item>
        <item>Jakarta, Indonesia</item>
        <item>Solo, Indonesia</item>
        <item>San Fransisco, USA</item>
    </string-array>

    <integer-array name="repository">
        <item>102</item>
        <item>37</item>
        <item>9</item>
        <item>30</item>
        <item>56</item>
        <item>28</item>
        <item>44</item>
        <item>110</item>
        <item>1064</item>
        <item>65</item>
        <item>19</item>
        <item>57</item>
    </integer-array>

    <string-array name="company">
        <item>Google, Inc.</item>
        <item>MindOrksOpenSource</item>
        <item>Google</item>
        <item>Google working on @android</item>
        <item>Working Group Two</item>
        <item>AndroidHive | Droid5</item>
        <item>gojek-engineering</item>
        <item>KotlinID</item>
        <item>JVMDeveloperID @KotlinID @IDDevOps</item>
        <item>Nusantara Beta Studio</item>
        <item>Nusa Konstruksi Enjiniring</item>
        <item>Symfony/Blackfire</item>
    </string-array>

    <integer-array name="followers">
        <item>56995</item>
        <item>5153</item>
        <item>7972</item>
        <item>14725</item>
        <item>788</item>
        <item>18628</item>
        <item>277</item>
        <item>178</item>
        <item>428</item>
        <item>465</item>
        <item>12</item>
        <item>11900</item>
    </integer-array>

    <integer-array name="following">
        <item>12</item>
        <item>2</item>
        <item>0</item>
        <item>1</item>
        <item>0</item>
        <item>3</item>
        <item>39</item>
        <item>23</item>
        <item>61</item>
        <item>10</item>
        <item>1</item>
        <item>0</item>
    </integer-array>

    <string-array name="description">
        <item>Announcement : If you find Android Arsenal useful and wouldn\'t mind to support the project, you can switch off AdBlock or similar software for watching a little bit ads. This simple gesture will help to develop and maintain the project.</item>
        <item>I am a software engineer with a passion for sharing knowledge through open-source, blogs and videos. I have helped more than 2 million developers in excelling in their careers.</item>
        <item>As some of you may know, Marakana runs the San Francisco Android User Group, and for our kick-off event we had Romain Guy from Google come and deliver his Google I/O talk: Turbo-charge your UI: How to Make your Android UI Fast and Efficient.</item>
        <item>I work as an engineer in the Android Developer Relations team. This is my personal blog and any views expressed here are mine, and mine alone.</item>
        <item>Creator of https://javalin.io (https://github.com/tipsy/javalin), yup..not much to say about</item>
        <item>Once your app is live on playstore, app rating and reviews are very crusical factors to drive more downloads. To achieve this, we usually ask users to rate thr app by showing a dialog with couple of buttons and redirecting them to playstore. With this user experience, there are chances that user might not come back to our app once redirected to playstore. Also a novice user finds it difficult to rate the app on playstore.</item>
        <item>Experienced Backend Software Engineer with a demonstrated history of working in the information technology, financial technology and services industry. Skilled in Kotlin, Vert.x, and JVM based Framework and Tools. Strong engineering professional with a Master of Computer Science focused in Computer Science from Universitas Gadjah Mada (UGM).</item>
        <item>Howdy 👋🏻, I\'m Budi Oktaviyan. The only way to do a great work, is to love what you do. 🤷🏻‍♂️ Ask me anything about android, iOS and any mobile cross-platform frameworks https://budioktaviyan.github.io</item>
        <item>I am a father and software developer. Love Coding, Software Development, Community Leader of @jvmdeveloperid, @KotlinID n @IDDevOps. https://linktr.ee/hendisantika</item>
        <item>Saat ditanya apa yang paling membuatnya semangat, Sidiq menjawab simpel: \“Berbagi ilmu dan berkah untuk Indonesia.\” Visi besarnya, memajukan kualitas sumber daya manusia Indonesia di bidang teknologi informasi. Mengaku terinspirasi Narenda Wicaksono (CEO Dicoding) yang disebutnya \“Bapak kompor IT se-Indonesia\”, Sidiq terpanggil untuk fokus pada pengembangan Aplikasi Android. Google Developer Expert (GDE) in Android ini sudah terjun di industri IT sejak 2013.</item>
        <item>Meskipun tanpa embel-embel IAI, namun bukan berarti aku tak mampu berarsitektur, merasa cukup dengan gelar ST dibelakang nama, tanpa ada imbuhan koma disusul MT atau M.Arch bahkan M.Eng.Arch, apalagi M.App. Acc. Meskipun tanpa lisensi resmi dari lembaga yang katanya lebih berwenang dan punya hak mencipta kreasi ruang dari lainnya bahkan apapun di dunia ini, tapi tidak lantas berhenti mencipta ruang dan merasakan meruang. https://sadarastudio.wordpress.com </item>
        <item>Fabien discovered the Web in 1994, at a time when connecting to the Internet was still associated with the harmful strident sounds of a modem. Being a developer by passion, he immediately started to build websites with Perl. But with the release of PHP 5, he decided to switch focus to PHP, and created the symfony framework project in 2004 to help his company leverage the power of PHP for its customers. Fabien is a serial-entrepreneur, and among other companies.</item>
    </string-array>

</resources>